# gpu-mon

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  deployment-workflow.md  helmfile.yaml  helmfile.yaml.gotmpl  pyproject.toml
.codex/: config.toml
.github/: pull_request_template.md
.github/workflows/: check-no-corp.yml  cleanup-ghcr.yml  component-e2e-tests.yml  docker-build-push.yml  helm-tests.yml  lint.yml  unit-tests.yml
alerting/alertmanager/: homelab.yaml
alerting/rules/: gpu-efficiency.yaml  gpu-hardware.yaml
ansible/inventory/: homelab.ini
ansible/playbooks/: deploy-node-agents.yaml
charts/clickhouse-cluster/: Chart.yaml  values.yaml
charts/metadata-collector/: Chart.yaml  values.yaml
charts/mock-dcgm-exporter/: Chart.yaml  values.yaml
charts/vmagent-central/: Chart.yaml  values.yaml
compose/: clickhouse-users.xml  docker-compose.yaml  vector-aggregator.toml  vmagent-config.yaml
compose/clickhouse-init/: 00-apply-schema.sh  00-gpu-monitoring.sql
dashboards/: README.md
docs/: architecture.md  ci-image-management.md  corp-deployment-strategy.md  corp-deployment.md  corp-quickstart.md  homelab-setup.md  macbook-quickstart.md  planning-v5.ko.md  planning-v5.md  test-architecture.md
environments/: defaults.yaml
schemas/: README.md  gpu_unified_logs.sql  s2_jobs.sql  s2_nodes.sql  s2_pools.sql  s2_projects.sql  vmware_vm_inventory.sql
scripts/: airgap-bundle.sh  airgap-install.sh  build-images.sh  render-compose-clickhouse-schema.sh  setup-homelab.sh  setup-macbook.sh  validate-deployment.sh
tests/: __init__.py  conftest.py
(+69 files in other folders)
